feat: increased command_timeout to 5000

--- a/starship.toml
+++ b/starship.toml
@@ -21,6 +21,7 @@ $jobs\
 $all
 """
 add_newline = true
+command_timeout = 5000
 
 [aws]
 format = "[$symbol($profile )(\\($region\\) )(\\[$duration\\])]($style) "
